--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /public/storage
 /public/images
 /public/assets/images
+/public/assets/videos
 /public/assets/files
 /resources/js/actions
 /resources/js/routes
